syntax = "proto3";

package gis.v1;

import "google/api/annotations.proto";

option go_package = "github.com/syalsr/GIS/pkg/GIS-api/v1;gis";

service GIS {
  rpc CreateStop (RequestStop) returns (ResponseStop) {
    option (google.api.http) = {
      post : "/config"
      body : "*"
    };
  };
}

message RequestStop{

}

message ResponseStop{
  
}